--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}.swiper-slide{height:80vh;}.swiper-slide img{height:100%;}.swiper-slide-content{bottom:15%;}#i9icu{color:white;}
+* { box-sizing: border-box; } body {margin: 0;}.swiper{height:80vh;}.swiper-slide{height:80vh !important;}
 
 </style>
 
@@ -79,91 +79,32 @@
 		<html>
  <head></head>
  <body id="in3v">
-  <div id="iz71">
-   <div class="swiper w-100 testimonial-swiper-one my-4 border">
+  <div id="i6z2">
+   <div class="swiper w-100 mySwiper">
     <div class="swiper-wrapper">
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
-      </div>
+     <div class="swiper-slide">
+      <img src="https://images.unsplash.com/photo-1630926906914-f98970d8894c?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D  " alt="swiper-image" class="swiper-image w-100 h-100">
      </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Second Slide</p><span>Some representative placeholder content for the second slide.</span>
-      </div>
+     <div class="swiper-slide">
+      <img src="https://images.unsplash.com/photo-1678366633411-fafa89580dea?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
      </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
-      </div>
-     </div>
-    </div>
-    <div class="swiper-button-next" id="i9icu"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
-   </div>
-  </div>
-  <div id="irwu4">
-   <div class="swiper w-100 testimonial-swiper-one my-4 border">
-    <div class="swiper-wrapper">
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Second Slide</p><span>Some representative placeholder content for the second slide.</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
-      </div>
+     <div class="swiper-slide">
+      <img src="https://images.unsplash.com/photo-1621619856624-42fd193a0661?q=80&amp;w=2058&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
      </div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
+    <div class="swiper-scrollbar"></div>
    </div>
   </div>
-  <div id="icnij">
-   <div class="swiper w-100 testimonial-swiper-one my-4 border">
-    <div class="swiper-wrapper">
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Second Slide</p><span>Some representative placeholder content for the second slide.</span>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
-      </div>
-     </div>
-    </div>
-    <div class="swiper-button-next" id="ikqwc"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
-   </div>
-  </div>
-  <script>var items = document.querySelectorAll('#iz71, #irwu4, #icnij');
-          for (var i = 0, len = items.length; i < len; i++) {
-            (function(){
-// Check if Swiper CSS is already added
+  <script>var props = {"i6z2":{"autoplay":false,"loop":false,"scrollbar":false,"navigation":true,"direction":"horizontal","paginationType":"bullets","initialSlide":1,"speed":300,"dynamicBullets":false,"clickable":false,"effect":"slide"}};
+          var ids = Object.keys(props).map(function(id) { return '#'+id }).join(',');
+          var els = document.querySelectorAll(ids);
+          for (var i = 0, len = els.length; i < len; i++) {
+            var el = els[i];
+            (function script({ autoplay, loop, scrollbar, navigation, direction, paginationType, initialSlide, speed, dynamicBullets, clickable, effect }) {
+        // Check if Swiper CSS is already added
         if (!document.querySelector('link[href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"]')) {
             // Dynamically add Swiper CSS to the head element
             const swiperCssLink = document.createElement('link');
@@ -179,43 +120,81 @@
             document.head.appendChild(swiperJsScript);
             // Wait for the Swiper JS to be loaded before initializing
             swiperJsScript.onload = function () {
+                // console.log('Swiper Js is not exist');
                 // Swiper initialization
-                // @ts-ignore
-                let swiper = new Swiper(".testimonial-swiper-one", {
-                    slidesPerView: 1,
+                //@ts-ignore
+                const swiper = new Swiper(".mySwiper", {
                     spaceBetween: 30,
-                    loop: true,
+                    loop,
+                    autoplay,
+                    scrollbar: {
+                        el: '.swiper-scrollbar',
+                        draggable: true,
+                        enabled: scrollbar
+                    },
                     navigation: {
                         nextEl: ".swiper-button-next",
                         prevEl: ".swiper-button-prev",
+                        enabled: navigation
                     },
+                    direction,
                     pagination: {
                         el: '.swiper-pagination',
-                        type: 'bullets',
+                        type: paginationType,
+                        dynamicBullets,
+                        clickable,
                     },
-                    autoplay: true,
+                    speed,
+                    initialSlide: initialSlide - 1,
+                    effect,
+                    observer: true,
+                });
+                // Update swiper on any change
+                swiper && swiper.on('observerUpdate', function () {
+                    // console.log('Obsever Update');
+                    swiper.update();
+                    swiper.updateSlides();
                 });
             };
         }
         else {
             // Swiper JS is already added, directly initialize Swiper
-            // @ts-ignore
-            let swiper = new Swiper(".testimonial-swiper-one", {
-                slidesPerView: 1,
+            // console.log('Swiper Js is allreday added');
+            //@ts-ignore
+            const swiper = new Swiper(".mySwiper", {
                 spaceBetween: 30,
-                loop: true,
+                loop,
+                autoplay,
+                scrollbar: {
+                    el: '.swiper-scrollbar',
+                    draggable: true,
+                    enabled: scrollbar
+                },
                 navigation: {
                     nextEl: ".swiper-button-next",
                     prevEl: ".swiper-button-prev",
+                    enabled: navigation
                 },
+                direction,
                 pagination: {
                     el: '.swiper-pagination',
-                    type: 'bullets',
+                    type: paginationType,
+                    dynamicBullets,
+                    clickable,
                 },
-                autoplay: true,
+                speed,
+                initialSlide: initialSlide - 1,
+                effect,
+                observer: true,
+            });
+            // Update swiper on any change
+            swiper && swiper.on('observerUpdate', function () {
+                // console.log('Obsever Update');
+                swiper.update();
+                swiper.updateSlides();
             });
         }
-}.bind(items[i]))();
+    }.bind(el))(props[el.id]);
           }</script>
  </body>
 </html>
