4c4c3349-1b86-487d-98eb-cf879d1efa75

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}.swiper{height:80vh;}.swiper-slide{height:80vh !important;}.swiper-slide-content{bottom:15%;}
+* { box-sizing: border-box; } body {margin: 0;}.swiper-slide{height:40vh;}.swiper-slide img{height:100%;}.swiper-slide-content{bottom:15%;}#iunpp{color:red;}#idmf{color:orange;}
 
 </style>
 
@@ -79,87 +79,142 @@
 		<html>
  <head></head>
  <body id="in3v">
-  <div id="isyg">
-   <div class="swiper w-100 testimonial-swiper-one my-4 border">
+  <div id="iy5g">
+   <div class="swiper w-100 testimonial-swiper-two my-4 px-lg-5 px-0">
     <div class="swiper-wrapper">
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center" id="iijg">
+       <p class="fs-5 mb-2" id="idmf">First Slide</p>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Second Slide</p><span>Some representative placeholder content for the second slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Second Slide</p>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Third Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fourth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fifth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Sixt Slide</p>
       </div>
      </div>
     </div>
-    <div class="swiper-button-next" id="i4r4j"></div>
+    <div id="imdgn" class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
    </div>
   </div>
-  <div id="iv806">
-   <div class="swiper w-100 testimonial-swiper-one my-4 border">
+  <div id="i04coj">
+   <div class="swiper w-100 testimonial-swiper-two my-4 px-lg-5 px-0">
     <div class="swiper-wrapper">
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">First Slide</p>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Second Slide</p><span>Some representative placeholder content for the second slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Second Slide</p>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2" id="iunpp">Third Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fourth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fifth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Sixt Slide</p>
       </div>
      </div>
     </div>
-    <div class="swiper-button-next" id="iotyg"></div>
+    <div class="swiper-button-next" id="il8waf"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
    </div>
   </div>
-  <div id="i143b">
-   <div class="swiper w-100 testimonial-swiper-one my-4 border">
+  <div id="imo3s">
+   <div class="swiper w-100 testimonial-swiper-two my-4 px-lg-5 px-0">
     <div class="swiper-wrapper">
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">First Slide</p>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Second Slide</p><span>Some representative placeholder content for the second slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Second Slide</p>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
-       <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Third Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fourth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Fifth Slide</p>
+      </div>
+     </div>
+     <div class="swiper-slide position-relative">
+      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
+       <p class="fs-5 mb-2">Sixt Slide</p>
       </div>
      </div>
     </div>
-    <div class="swiper-button-next" id="i02zw"></div>
+    <div class="swiper-button-next" id="iqs0k"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
    </div>
   </div>
-  <script>var items = document.querySelectorAll('#isyg, #iv806, #i143b');
+  <script>var items = document.querySelectorAll('#iy5g, #i04coj, #imo3s');
           for (var i = 0, len = items.length; i < len; i++) {
             (function(){
 // Check if Swiper CSS is already added
@@ -180,7 +235,7 @@
             swiperJsScript.onload = function () {
                 // Swiper initialization
                 // @ts-ignore
-                let swiper = new Swiper(".testimonial-swiper-one", {
+                let swiper = new Swiper(".testimonial-swiper-two", {
                     slidesPerView: 1,
                     spaceBetween: 30,
                     loop: true,
@@ -193,13 +248,35 @@
                         type: 'bullets',
                     },
                     autoplay: true,
+                    breakpoints: {
+                        640: {
+                            slidesPerView: 1,
+                            spaceBetween: 20,
+                        },
+                        768: {
+                            slidesPerView: 2,
+                            spaceBetween: 40,
+                        },
+                        1024: {
+                            slidesPerView: 3,
+                            spaceBetween: 50,
+                        },
+                        1440: {
+                            slidesPerView: 4,
+                            spaceBetween: 60,
+                        },
+                        1800: {
+                            slidesPerView: 5,
+                            spaceBetween: 70
+                        }
+                    },
                 });
             };
         }
         else {
             // Swiper JS is already added, directly initialize Swiper
             // @ts-ignore
-            let swiper = new Swiper(".testimonial-swiper-one", {
+            let swiper = new Swiper(".testimonial-swiper-two", {
                 slidesPerView: 1,
                 spaceBetween: 30,
                 loop: true,
@@ -212,6 +289,28 @@
                     type: 'bullets',
                 },
                 autoplay: true,
+                breakpoints: {
+                    640: {
+                        slidesPerView: 1,
+                        spaceBetween: 20,
+                    },
+                    768: {
+                        slidesPerView: 2,
+                        spaceBetween: 40,
+                    },
+                    1024: {
+                        slidesPerView: 3,
+                        spaceBetween: 50,
+                    },
+                    1440: {
+                        slidesPerView: 4,
+                        spaceBetween: 60,
+                    },
+                    1800: {
+                        slidesPerView: 5,
+                        spaceBetween: 70
+                    }
+                },
             });
         }
 }.bind(items[i]))();
