992ac1e7-c6e5-41aa-8fa3-d8dd6dd04675

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}.swiper-slide{height:40vh;}.swiper-slide img{height:100%;}.swiper-slide-content{bottom:15%;}#iunpp{color:red;}#idmf{color:orange;}
+* { box-sizing: border-box; } body {margin: 0;}.swiper-slide{height:80vh;}.swiper-slide img{height:100%;}.swiper-button-next{color:white;}.swiper-button-prev{color:white;}.slider-slide-content{transform:translate(-50%, -50%);}#ixofj{color:red;}#i1e4n{color:blue;}
 
 </style>
 
@@ -79,142 +79,88 @@
 		<html>
  <head></head>
  <body id="in3v">
-  <div id="iy5g">
-   <div class="swiper w-100 testimonial-swiper-two my-4 px-lg-5 px-0">
+  <div id="i0rv">
+   <div class="swiper w-100 testimonial-swiper-three my-4 border">
     <div class="swiper-wrapper">
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center" id="iijg">
-       <p class="fs-5 mb-2" id="idmf">First Slide</p>
+      <img src="https://images.unsplash.com/photo-1625334666162-8ad10e7332d2?q=80&amp;w=1974&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Second Slide</p>
+      <img src="https://images.unsplash.com/photo-1638864616275-9f0b291a2eb6?q=80&amp;w=1964&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Third Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Fourth Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Fifth Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Sixt Slide</p>
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/mi23121202/ASSET/web-builder-ui.png" alt="swiper-image" id="ige71" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2" id="ixofj">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
     </div>
-    <div id="imdgn" class="swiper-button-next"></div>
+    <div class="swiper-button-next" id="ivl3v"></div>
     <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
+    <div class="swiper-pagination text-white"></div>
    </div>
   </div>
-  <div id="i04coj">
-   <div class="swiper w-100 testimonial-swiper-two my-4 px-lg-5 px-0">
+  <div id="i8ms4">
+   <div class="swiper w-100 testimonial-swiper-three my-4 border">
     <div class="swiper-wrapper">
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">First Slide</p>
+      <img src="https://images.unsplash.com/photo-1625334666162-8ad10e7332d2?q=80&amp;w=1974&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2" id="i1e4n">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Second Slide</p>
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/mi23121202/ASSET/web-builder-ui.png" alt="swiper-image" id="iu6mi" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2" id="iunpp">Third Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Fourth Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Fifth Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Sixt Slide</p>
+      <img src="https://images.unsplash.com/photo-1638184984605-af1f05249a56?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
     </div>
-    <div class="swiper-button-next" id="il8waf"></div>
+    <div class="swiper-button-next" id="i63wl"></div>
     <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
+    <div class="swiper-pagination text-white"></div>
    </div>
   </div>
-  <div id="imo3s">
-   <div class="swiper w-100 testimonial-swiper-two my-4 px-lg-5 px-0">
+  <div id="ix89j">
+   <div class="swiper w-100 testimonial-swiper-three my-4 border">
     <div class="swiper-wrapper">
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">First Slide</p>
+      <img src="https://images.unsplash.com/photo-1625334666162-8ad10e7332d2?q=80&amp;w=1974&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Second Slide</p>
+      <img src="https://images.unsplash.com/photo-1638864616275-9f0b291a2eb6?q=80&amp;w=1964&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
      <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Third Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Fourth Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Fifth Slide</p>
-      </div>
-     </div>
-     <div class="swiper-slide position-relative">
-      <img src="https://img.freepik.com/premium-photo/beautiful-natural-green-plant_480962-16316.jpg" alt="swiper-image" class="swiper-image w-100 h-100">
-      <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content text-center">
-       <p class="fs-5 mb-2">Sixt Slide</p>
+      <img src="https://images.unsplash.com/photo-1638184984605-af1f05249a56?q=80&amp;w=1932&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="swiper-image" class="swiper-image w-100 h-100">
+      <div class="bg-white position-absolute d-flex justify-content-center align-items-center flex-column py-5 text-center px-5 w-75 top-50 start-50 slider-slide-content">
+       <p class="fs-4 mb-2">“Have customers review you and share what they had to say. Click to edit and add their testimonial.”</p><span>Alexa Young, CA</span>
       </div>
      </div>
     </div>
-    <div class="swiper-button-next" id="iqs0k"></div>
+    <div class="swiper-button-next" id="irovz"></div>
     <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
+    <div class="swiper-pagination text-white"></div>
    </div>
   </div>
-  <script>var items = document.querySelectorAll('#iy5g, #i04coj, #imo3s');
+  <script>var items = document.querySelectorAll('#i0rv, #i8ms4, #ix89j');
           for (var i = 0, len = items.length; i < len; i++) {
             (function(){
 // Check if Swiper CSS is already added
@@ -235,7 +181,7 @@
             swiperJsScript.onload = function () {
                 // Swiper initialization
                 // @ts-ignore
-                let swiper = new Swiper(".testimonial-swiper-two", {
+                let swiper = new Swiper(".testimonial-swiper-three", {
                     slidesPerView: 1,
                     spaceBetween: 30,
                     loop: true,
@@ -245,30 +191,7 @@
                     },
                     pagination: {
                         el: '.swiper-pagination',
-                        type: 'bullets',
-                    },
-                    autoplay: true,
-                    breakpoints: {
-                        640: {
-                            slidesPerView: 1,
-                            spaceBetween: 20,
-                        },
-                        768: {
-                            slidesPerView: 2,
-                            spaceBetween: 40,
-                        },
-                        1024: {
-                            slidesPerView: 3,
-                            spaceBetween: 50,
-                        },
-                        1440: {
-                            slidesPerView: 4,
-                            spaceBetween: 60,
-                        },
-                        1800: {
-                            slidesPerView: 5,
-                            spaceBetween: 70
-                        }
+                        type: 'fraction',
                     },
                 });
             };
@@ -276,7 +199,7 @@
         else {
             // Swiper JS is already added, directly initialize Swiper
             // @ts-ignore
-            let swiper = new Swiper(".testimonial-swiper-two", {
+            let swiper = new Swiper(".testimonial-swiper-three", {
                 slidesPerView: 1,
                 spaceBetween: 30,
                 loop: true,
@@ -286,30 +209,7 @@
                 },
                 pagination: {
                     el: '.swiper-pagination',
-                    type: 'bullets',
-                },
-                autoplay: true,
-                breakpoints: {
-                    640: {
-                        slidesPerView: 1,
-                        spaceBetween: 20,
-                    },
-                    768: {
-                        slidesPerView: 2,
-                        spaceBetween: 40,
-                    },
-                    1024: {
-                        slidesPerView: 3,
-                        spaceBetween: 50,
-                    },
-                    1440: {
-                        slidesPerView: 4,
-                        spaceBetween: 60,
-                    },
-                    1800: {
-                        slidesPerView: 5,
-                        spaceBetween: 70
-                    }
+                    type: 'fraction',
                 },
             });
         }
